# Local-Problem-Packager-Spec

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  local_problem_packager_spec.md  package.json  pyproject.toml
.github/workflows/: ci.yml
apps/desktop/: index.html  package.json  tsconfig.json
apps/desktop/src/: App.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
crates/core-schema/: Cargo.toml
crates/core-schema/src/: lib.rs
crates/packager/: Cargo.toml
crates/packager/src/: lib.rs
crates/validator/: Cargo.toml
crates/validator/src/: lib.rs
docs/: architecture-freeze-mvp.md  mcq-end-to-end-implementation-guide.md  mvp-roadmap.md  repo-structure.md
sample_zip/MCQ_sample_zip/: README.md
sample_zip/MCQ_sample_zip/mcq/sample_general_math/: explanation.md  meta.yaml  options.csv  placement.yaml  question.md  tags.txt
sample_zip/Programing_sample_zip/problems/sample_two_sum/: description.md  manifest.json
sample_zip/Programing_sample_zip/problems/sample_two_sum/stubs/: python.py
sample_zip/Programing_sample_zip/problems/sample_two_sum/testcases/: cpp.json  python.json
sample_zip/Programing_sample_zip/problems/sample_two_sum/wrappers/: cpp_wrapper.cpp  (+1 more)
samples/golden/mcq/: README.md
samples/invalid/mcq/: README.md
schemas/mcq/v1.0/: manifest.schema.json
schemas/shared/v1.0/: project.schema.json
services/ingestion-py/: pyproject.toml
services/ingestion-py/src/ingestion/: __init__.py  service.py
services/ingestion-py/tests/: test_smoke.py
tests/integration/: README.md
tools/scripts/: README.md
