[workspace]
members = [
  "apps/desktop/src-tauri",
  "crates/core-schema",
  "crates/validator",
  "crates/packager"
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "UNLICENSED"
authors = ["Local Problem Packager Team"]

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
zip = "2"
sha2 = "0.10"
